deployment/deployment.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "eventshuffle-api"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "eventshuffle-api"
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: "eventshuffle-api"
    spec:
      volumes:
      - name: "nginx-configmap-volume"
        configMap:
          name: "nginx-configmap"
      containers:
      - name: "api-gateway"
        image: "nginx:latest"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/etc/nginx/conf.d"
          name: "nginx-configmap-volume"
      - name: "event-service"
        image: "gcr.io/PROJECT_ID/IMAGE:TAG"
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "100m"
      - name: "mariadb"
        image: "mariadb:10.5"
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "100m"
