deployment/api-gateway-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "api-gateway-service"
spec:
  type: "LoadBalancer"
  selector:
    app: "eventshuffle-api"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
