deployment/event-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: event-service-service
spec:
  type: ClusterIP
  selector:
    app: eventshuffle-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
