deployment/mariadb-service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "mariadb-service"
spec:
  type: "ClusterIP"
  selector:
    app: "eventshuffle-api"
  ports:
    - protocol: "TCP"
      port: 3306
      targetPort: 3306
